GNOME Bugzilla – Bug 768657
places-view: fix open action for locations without a mount or volume
Last modified: 2016-07-12 11:18:10 UTC
See patches.
Created attachment 331196 [details] [review] places-view: fix open action for locations without a mount or volume In the "Other Locations" view, locations can be opened from the context menu based on their mount or volume. However, some locations, like "Computer", do not have either of those so they cannot be opened from the context menu. In order to fix this, the file associated with the location can be used as well.
Review of attachment 331196 [details] [review]: Looks good to me, thanks Razvan! However, this needs to go into gtk+ directly. Nautilus pulls a copy of the code using /gtk/gtk-code-generator.sh So if you want move the patch to gtk+ repo gtkplacesview.c and then once is commited, run the code generator in nautilus and create a new commit with the new code.
Created attachment 331309 [details] [review] placesview: fix open action for locations without a mount or volume In the "Other Locations" view, locations can be opened from the context menu based on their mount or volume. However, some locations, like "Computer", do not have either of those so they cannot be opened from the context menu. In order to fix this, the file associated with the location can be used as well.
Review of attachment 331309 [details] [review]: LGTM, I think we can just commit this one already.
Comment on attachment 331309 [details] [review] placesview: fix open action for locations without a mount or volume Attachment 331309 [details] pushed as 9747312 - placesview: fix open action for locations without a mount or volume
Created attachment 331312 [details] [review] places-view: fetch updates from gtk+ repo
Review of attachment 331312 [details] [review]: LGTM thanks!
Attachment 331312 [details] pushed as 25f4baf - places-view: fetch updates from gtk+ repo